; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xact.c_SetCurrentStatementStartTimestamp.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xact.c_SetCurrentStatementStartTimestamp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stmtStartTimestamp = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SetCurrentStatementStartTimestamp() #0 {
  %1 = call i32 (...) @IsParallelWorker()
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %5, label %3

3:                                                ; preds = %0
  %4 = call i64 (...) @GetCurrentTimestamp()
  store i64 %4, i64* @stmtStartTimestamp, align 8
  br label %10

5:                                                ; preds = %0
  %6 = load i64, i64* @stmtStartTimestamp, align 8
  %7 = icmp ne i64 %6, 0
  %8 = zext i1 %7 to i32
  %9 = call i32 @Assert(i32 %8)
  br label %10

10:                                               ; preds = %5, %3
  ret void
}

declare dso_local i32 @IsParallelWorker(...) #1

declare dso_local i64 @GetCurrentTimestamp(...) #1

declare dso_local i32 @Assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
